Thu Apr 24 17:39:53 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (statfs_inspect): suppress warnings.
	  assume those values won't be larger than LONG_LONG_MAX.

Thu Apr 24 11:53:28 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_initialize): SYMID on a value
	  other than Symbol is an undefined behavior.  fix up r31699.
	  [ruby-core:62142] [Bug #9771]

Thu Apr 24 11:21:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_sym2id, rb_sym2id_without_pindown): return 0 for
	  non-symbol values, for the time being.

Thu Apr 24 05:50:13 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (dsym_node_gen): like r45492, call rb_gc_resurrect().

Wed Apr 23 20:36:22 2014  Tanaka Akira  <akr@fsij.org>

	* ext/etc/extconf.rb: Build ext/etc unconditionally.

Wed Apr 23 14:10:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (statfs_fsid): remove statfs.f_fsid because it doesn't return
	  meaningful value portably. http://togetter.com/li/658517

Wed Apr 23 11:03:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): use rb_str_append to
	  reuse coderange bits other than ASCII-8BIT, and keep
	  taintedness.  [ruby-dev:48118] [Bug #9769]

Wed Apr 23 00:43:00 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (ustatfs): implementation of
	  statfs(2) clone. [EXPERIMENTAL]

	* file.c (rb_io_statfs): use above function.

	* configure.in, win32/Makefile.sub (struct statfs): available.

Tue Apr 22 23:56:24 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_io_stafs): use statfs(2) if fstatfs(2) is unavailable.

	* configure.in (fstatfs): check it.

Tue Apr 22 22:15:51 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_io_statfs): need to define even if the system doesn't have
	  fstatfs(2).

	* test/ruby/test_file.rb (TestFile#test_statfs): skip if IO#stafs is not
	  implemented.

Tue Apr 22 19:32:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>
