@@ -1,3 +1,7 @@
+Thu Apr 24 20:53:02 2014  Tanaka Akira  <akr@fsij.org>
+
+	* lib/tmpdir.rb: Don't need to rescue LoadError for etc.so.
+
 Thu Apr 24 17:39:53 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* file.c (statfs_inspect): suppress warnings.
